# atomgpt

./: .coveragerc  LICENSE  README.md  dev-requirements.txt  environment.yml  finetune.py  pyproject.toml  pyproject.toml1  requirements.txt  setup.cfg  setup.py  tinnet159x.py  vv.py
.github/workflows/: main.yml  sample.yml
atomgpt/: __init__.py  atomjson.py  config.py  ff.py  gpt.py  gpt2atom.py  train_id_prop.py  train_prop.py
atomgpt/data/: __init__.py  dataset.py
atomgpt/forward_models/: forward_models.py  forward_predict.py  train_id_prop.py
atomgpt/inverse_models/: __init__.py  _utils.py  _utils2.py  callbacks.py  cohere.py  compiler.py  compiler_replacements.py  custom_trainer.py  database_generator.py  dataset_utils.py  dpo.py  gemma.py  gemma2.py  gguf_loader.py  gradient_checkpointing.py  granite.py  inf.py  inference.py  inverse_models.py  inverse_predict.py  inverse_vision.py  inverse_vision_predict.py  llama.py  loader.py  loader_utils.py  logging_utils.py  loss_utils.py  mapper.py  mistral.py  patch_torch_functions.py  patching_utils.py  peft_utils.py  qwen2.py  qwen3.py  qwen3_moe.py  rl.py  rl_replacements.py  save.py  saver.py  tokenizer_utils.py  (+6 more)
atomgpt/models/: __ini__.py  causal.py
atomgpt/scripts/: alex2d.py  alpaca_tc_supercon.py  atomjson.py  bnbb.py  c2db.py  convert_robo.py  describe.py  finetune.py  finetune1.py  finetune1.py.bak_0.12843  finetune1.py.bak_0.139  finetune1.py.bak_0.146  finetune1a.py  finetune2.py  finetune4.py  finetune5.py  finetune6.py  finetune7.py  finetune7a.py.alignn  finetune7a.py.bak  finetune7alignn.py  gpt.py  (+24 more)
(+35 files in other folders)
